Mudança básica de realocação de pastas

--- a/Projeto-GoogleGlass/projeto-glass-html5/multimidia.html
+++ b/Projeto-GoogleGlass/projeto-glass-html5/multimidia.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/projeto-glass-html5/_css/estilo.css">
-  <link rel="stylesheet" type="text/css" href="/projeto-glass-html5/_css/media.css">
+  <link rel="stylesheet" type="text/css" href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_css/estilo.css">
+  <link rel="stylesheet" type="text/css" href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_css/media.css">
   <title>TUDO SOBRE O GOOGLE GLASS</title>
 </head>
-<script src="/projeto-glass-html5/_javascript/funcoes.js"></script>
+<script src="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_javascript/funcoes.js"></script>
 <body>
   <div id="interface">
     <header id="header1">
@@ -17,17 +17,17 @@
       <h2>A revolução do Google está chegando</h2>
       </hgroup>
   
-  <img id="icon" src="/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
+  <img id="icon" src="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
   
     <nav id="menu">
   <h1>Menu Principal</h1>
   <ul type="a">
-  <li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/home.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')"><a href="/projeto-glass-html5/index.html" target="_self">Home</a></li>
-  <li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')"><a href="/projeto-glass-html5/specs.html" target="_self">Especificações</a></li>
-  <li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/fotos.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')"><a href="/projeto-glass-html5/fotos.html" target="_self" >Fotos</a></li>
-  <li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')"><a href="/projeto-glass-html5/multimidia.html" target="_self">Multimídia</a></li>
-  <li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/contato.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')"><a href="/projeto-glass-html5/fale-conosco.html" target="_self">Fale conosco</a></li>
-  </ul>
+    <li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/home.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/index.html" target="_self">Home</a></li>
+    <li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/specs.html" target="_self">Especificações</a></li>
+    <li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/fotos.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/fotos.html" target="_self" >Fotos</a></li>
+    <li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/multimidia.html" target="_self">Multimídia</a></li>
+    <li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/contato.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/fale-conosco.html" target="_self">Fale conosco</a></li>
+    </ul>
   </nav>
     </header>
     <section id="full-bodY">
@@ -43,16 +43,16 @@
 
 <div id="tv-radio">
 <audio id="music" controls="controls">
-  <source src="/_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg">
-  <source src="/_media/2009-lovers-carvings-bibio.m4a" type="audio/x-aac">
-  <source src="/_media/2009-lovers-carvings-bibio.m4a" type="audio/ogg">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/2009-lovers-carvings-bibio.mp3" type="audio/mpeg">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/2009-lovers-carvings-bibio.m4a" type="audio/x-aac">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/2009-lovers-carvings-bibio.m4a" type="audio/ogg">
   Sorry, but it wasn't possible to load the audio!
 </audio>
 
-<video id="films" controls="controls" poster="/projeto-glass-html5/_imagens/video-mini03.jpg">
-  <source src="/_media/getting-started.mp4" type="video/mp4">
-  <source src="/_media/getting-started.ogv" type="video/ogv">
-  <source src="/_media/getting-started.webm" type="video/webm">
+<video id="films" controls="controls" poster="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/video-mini03.jpg">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/getting-started.mp4" type="video/mp4">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/getting-started.ogv" type="video/ogv">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/getting-started.webm" type="video/webm">
   Sorry, but it wasn't possible to load the video!
 </video>
 
