--- a/Projeto-GoogleGlass/projeto-glass-html5/index.html
+++ b/Projeto-GoogleGlass/projeto-glass-html5/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/projeto-glass-html5/_css/estilo.css">
+  <link rel="stylesheet" type="text/css" href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_css/estilo.css">
   <title>TUDO SOBRE O GOOGLE GLASS</title>
 </head>
-<script src="/projeto-glass-html5/_javascript/funcoes.js"></script>
+<script src="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_javascript/funcoes.js"></script>
 <body>
 
 <div id="interface">
@@ -17,16 +17,16 @@
     <h2>A revolução do Google está chegando</h2>
     </hgroup>
 
-<img id="icon" src="/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
+<img id="icon" src="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png">
 
   <nav id="menu">
 <h1>Menu Principal</h1>
 <ul type="a">
-<li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/home.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/projeto-glass-html5/index.html" target="_self">Home</a></li>
-<li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/projeto-glass-html5/specs.html" target="_self">Especificações</a></li>
-<li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/fotos.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/projeto-glass-html5/fotos.html" target="_self" >Fotos</a></li>
-<li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/projeto-glass-html5/multimidia.html" target="_self">Multimídia</a></li>
-<li onmouseover="photoSwitch('/projeto-glass-html5/_imagens/contato.png')" onmouseout="photoSwitch('/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/projeto-glass-html5/fale-conosco.html" target="_self">Fale conosco</a></li>
+<li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/home.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/index.html" target="_self">Home</a></li>
+<li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/especificacoes.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/specs.html" target="_self">Especificações</a></li>
+<li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/fotos.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/fotos.html" target="_self" >Fotos</a></li>
+<li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/multimidia.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/multimidia.html" target="_self">Multimídia</a></li>
+<li onmouseover="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/contato.png')" onmouseout="photoSwitch('/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-oculos-preto-peq.png')"><a href="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/fale-conosco.html" target="_self">Fale conosco</a></li>
 </ul>
 </nav>
   </header>
@@ -46,7 +46,7 @@
 
 <p> O <span style="font-weight: 900;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeo&shy;con&shy;fe&shy;rên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 <figure class="imgfgv">
-<img src="/projeto-glass-html5/_imagens/glass-quadro-homem-mulher.jpg">
+<img src="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/glass-quadro-homem-mulher.jpg">
 <figcaption>
   <h3>Google Glass</h3>
   <p>Uma nova maneira de ver o mundo</p>
@@ -73,7 +73,7 @@
 <h2>O que você pode fazer com o Google Glasses</h2>
 <p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-<wbr/>humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-<video id="films1" controls="controls" poster="/projeto-glass-html5/_imagens/video-mini01.jpg">
+<video id="films1" controls="controls" poster="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/video-mini01.jpg">
   <source src="/_media/one-day.mp4" type="video/mp4">
   <source src="/_media/one-day.ogv" type="video/ogv">
   <source src="/_media/one-day.webm" type="video/webm">
@@ -86,10 +86,10 @@
 
 <h1>Outras Notícias</h1>
 <h2>Vídeo mais recente</h2>
-<video id="films2" controls="controls" poster="/projeto-glass-html5/_imagens/video-mini02.jpg">
-  <source src="/_media/how-it-feels.mp4" type="video/mp4">
-  <source src="/_media/how-it-feels.ogv" type="video/ogg">
-  <source src="/_media/how-it-feels.webm" type="video/webm">
+<video id="films2" controls="controls" poster="/Meus-Projetos/Projeto-GoogleGlass/projeto-glass-html5/_imagens/video-mini02.jpg">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/how-it-feels.mp4" type="video/mp4">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/how-it-feels.ogv" type="video/ogg">
+  <source src="/Meus-Projetos/Projeto-GoogleGlass/_media/how-it-feels.webm" type="video/webm">
   Sorry, but it wasn't possible to load the video!
 </video>
 
